resources/dsaas/dsaas-production/che-devfile-registry.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: che-devfile-registry
  name: che-devfile-registry
spec:
  host: che-devfile-registry.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: che-devfile-registry
    weight: 100
  wildcardPolicy: None
